--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>HTML ISSUE BOT 9000</title>
-<head>
+</head>
 <body>
 
   <h1>HTML ISSUE BOT 9000 - Checks for Issues</h1>
@@ -27,7 +27,7 @@
 
   <h2> Issue Bot Camera Capture Archive</h2>
 
-  <img src="images/spencer.jpg" alt="Spencer" target="_blank">
+  <img src="images/spencer.jpg" alt="Spencer" />
 
 </body>
 </html>
